--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,14 +1,12 @@
 ---
 rails.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
 rails/index.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
-application.js: application-ee57c8c6d4cc4a969ff77e1e58d114ad.js
-application/index.js: application-ee57c8c6d4cc4a969ff77e1e58d114ad.js
+application.js: application-52407ea7e2d7b04ec785e03b6535412c.js
+application/index.js: application-52407ea7e2d7b04ec785e03b6535412c.js
 application.css: application-3db321fee71ffa25d2f2b80148ffc284.css
 application/index.css: application-3db321fee71ffa25d2f2b80148ffc284.css
-jquery.min.js: jquery.min-924451f91e1b8551b6f078ee754a0722.js
-jquery/index.min.js: jquery.min-924451f91e1b8551b6f078ee754a0722.js
-jquery.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
-jquery/index.min.map: jquery.min-6c267bfd2b3f36e6edccb2e584934c1c.map
+jquery.js: jquery-6cabf0a1b289276693e6e2e40c3971e1.js
+jquery/index.js: jquery-6cabf0a1b289276693e6e2e40c3971e1.js
 glyphicons-halflings-white.png: glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
 glyphicons-halflings-white/index.png: glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
 glyphicons-halflings.png: glyphicons-halflings-2851b489e8c39f8fad44fc10efb99c3e.png
